--- a/Pandas/05 - Excursus How to avoid and debug Coding Errors (incl. ChatGPT)/047 Test your debugging skills!.ipynb
+++ b/Pandas/05 - Excursus How to avoid and debug Coding Errors (incl. ChatGPT)/047 Test your debugging skills!.ipynb
@@ -6,236 +6,179 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-20T19:15:15.949311Z",
-     "start_time": "2024-12-20T19:15:15.595367Z"
+     "end_time": "2024-12-21T12:18:24.892703Z",
+     "start_time": "2024-12-21T12:18:24.884190Z"
     }
    },
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "summer = pd.read_csv('summer.csv')\n",
-    "summer"
+    "my_dict = {'Phelps, Michael': 22,\n",
+    "           'Latynina, Larisa': 18,\n",
+    "           'Andrianov, Nikolay': 51,\n",
+    "           'Mangiarotti, Edoardo': 13,\n",
+    "           'Ono, Takashi': \"13\",\n",
+    "           }"
    ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-21T12:18:24.939349Z",
+     "start_time": "2024-12-21T12:18:24.921329Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "my_dict",
+   "id": "b98b2d21813745c8",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "       Year    City      Sport           Discipline  \\\n",
-       "0      1896  Athens   Aquatics             Swimming   \n",
-       "1      1896  Athens   Aquatics             Swimming   \n",
-       "2      1896  Athens   Aquatics             Swimming   \n",
-       "3      1896  Athens   Aquatics             Swimming   \n",
-       "4      1896  Athens   Aquatics             Swimming   \n",
-       "...     ...     ...        ...                  ...   \n",
-       "31160  2012  London  Wrestling  Wrestling Freestyle   \n",
-       "31161  2012  London  Wrestling  Wrestling Freestyle   \n",
-       "31162  2012  London  Wrestling  Wrestling Freestyle   \n",
-       "31163  2012  London  Wrestling  Wrestling Freestyle   \n",
-       "31164  2012  London  Wrestling  Wrestling Freestyle   \n",
-       "\n",
-       "                         Athlete Country Gender                       Event  \\\n",
-       "0                  HAJOS, Alfred     HUN    Men              100M Freestyle   \n",
-       "1               HERSCHMANN, Otto     AUT    Men              100M Freestyle   \n",
-       "2              DRIVAS, Dimitrios     GRE    Men  100M Freestyle For Sailors   \n",
-       "3             MALOKINIS, Ioannis     GRE    Men  100M Freestyle For Sailors   \n",
-       "4             CHASAPIS, Spiridon     GRE    Men  100M Freestyle For Sailors   \n",
-       "...                          ...     ...    ...                         ...   \n",
-       "31160         JANIKOWSKI, Damian     POL    Men                    Wg 84 KG   \n",
-       "31161  REZAEI, Ghasem Gholamreza     IRI    Men                    Wg 96 KG   \n",
-       "31162             TOTROV, Rustam     RUS    Men                    Wg 96 KG   \n",
-       "31163          ALEKSANYAN, Artur     ARM    Men                    Wg 96 KG   \n",
-       "31164             LIDBERG, Jimmy     SWE    Men                    Wg 96 KG   \n",
-       "\n",
-       "        Medal  \n",
-       "0        Gold  \n",
-       "1      Silver  \n",
-       "2      Bronze  \n",
-       "3        Gold  \n",
-       "4      Silver  \n",
-       "...       ...  \n",
-       "31160  Bronze  \n",
-       "31161    Gold  \n",
-       "31162  Silver  \n",
-       "31163  Bronze  \n",
-       "31164  Bronze  \n",
-       "\n",
-       "[31165 rows x 9 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Sport</th>\n",
-       "      <th>Discipline</th>\n",
-       "      <th>Athlete</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>Medal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1896</td>\n",
-       "      <td>Athens</td>\n",
-       "      <td>Aquatics</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>HAJOS, Alfred</td>\n",
-       "      <td>HUN</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>100M Freestyle</td>\n",
-       "      <td>Gold</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1896</td>\n",
-       "      <td>Athens</td>\n",
-       "      <td>Aquatics</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>HERSCHMANN, Otto</td>\n",
-       "      <td>AUT</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>100M Freestyle</td>\n",
-       "      <td>Silver</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1896</td>\n",
-       "      <td>Athens</td>\n",
-       "      <td>Aquatics</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>DRIVAS, Dimitrios</td>\n",
-       "      <td>GRE</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>100M Freestyle For Sailors</td>\n",
-       "      <td>Bronze</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1896</td>\n",
-       "      <td>Athens</td>\n",
-       "      <td>Aquatics</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>MALOKINIS, Ioannis</td>\n",
-       "      <td>GRE</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>100M Freestyle For Sailors</td>\n",
-       "      <td>Gold</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1896</td>\n",
-       "      <td>Athens</td>\n",
-       "      <td>Aquatics</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>CHASAPIS, Spiridon</td>\n",
-       "      <td>GRE</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>100M Freestyle For Sailors</td>\n",
-       "      <td>Silver</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31160</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Freestyle</td>\n",
-       "      <td>JANIKOWSKI, Damian</td>\n",
-       "      <td>POL</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>Wg 84 KG</td>\n",
-       "      <td>Bronze</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31161</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Freestyle</td>\n",
-       "      <td>REZAEI, Ghasem Gholamreza</td>\n",
-       "      <td>IRI</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>Wg 96 KG</td>\n",
-       "      <td>Gold</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31162</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Freestyle</td>\n",
-       "      <td>TOTROV, Rustam</td>\n",
-       "      <td>RUS</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>Wg 96 KG</td>\n",
-       "      <td>Silver</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31163</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Freestyle</td>\n",
-       "      <td>ALEKSANYAN, Artur</td>\n",
-       "      <td>ARM</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>Wg 96 KG</td>\n",
-       "      <td>Bronze</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31164</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Freestyle</td>\n",
-       "      <td>LIDBERG, Jimmy</td>\n",
-       "      <td>SWE</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>Wg 96 KG</td>\n",
-       "      <td>Bronze</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>31165 rows × 9 columns</p>\n",
-       "</div>"
+       "{'Phelps, Michael': 22,\n",
+       " 'Latynina, Larisa': 18,\n",
+       " 'Andrianov, Nikolay': 51,\n",
+       " 'Mangiarotti, Edoardo': 13,\n",
+       " 'Ono, Takashi': '13'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-21T12:19:16.677173Z",
+     "start_time": "2024-12-21T12:19:16.429856Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "my_dict['Phelps,Michael']",
+   "id": "cea9fbb4651def3",
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Phelps,Michael'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mmy_dict\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mPhelps,Michael\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\n",
+      "\u001B[1;31mKeyError\u001B[0m: 'Phelps,Michael'"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-21T12:21:49.814385Z",
+     "start_time": "2024-12-21T12:21:49.802889Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "my_dict['Phelps, Michael']",
+   "id": "815e8069dcdf5a1e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-21T12:29:40.050279Z",
+     "start_time": "2024-12-21T12:29:40.039278Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "my_dict['Phelps, Michael'] + int(my_dict['Ono, Takashi'])",
+   "id": "f5125ce815f7a23b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-21T18:14:04.786435Z",
+     "start_time": "2024-12-21T18:14:04.766891Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "my_dict['Phelps, Michael'] - my_dic('Ono, Takashi')",
+   "id": "c8037566c376a248",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'my_dic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[9], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m my_dict[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPhelps, Michael\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m-\u001B[39m \u001B[43mmy_dic\u001B[49m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOno, Takashi\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'my_dic' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-21T18:19:53.088782Z",
+     "start_time": "2024-12-21T18:19:53.078483Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.Series(my_dict, name=\"Medals\")"
+   ],
+   "id": "68be067dab792752",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Phelps, Michael         22\n",
+       "Latynina, Larisa        18\n",
+       "Andrianov, Nikolay      51\n",
+       "Mangiarotti, Edoardo    13\n",
+       "Ono, Takashi            13\n",
+       "Name: Medals, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -243,7 +186,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "b98b2d21813745c8"
+   "id": "f542f4209c2c959c"
   }
  ],
  "metadata": {
