--- a/Pandas/Kaggle/3-summary functions and maps.ipynb
+++ b/Pandas/Kaggle/3-summary functions and maps.ipynb
@@ -4269,11 +4269,22 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "7. we'd like to host these wine reviews on our website, but rate system changing from 80 to 100 points is too hard to understand - we'd like to\n",
+    "translate them to simpler star ratings. A score of 95 and higher counts as 3 stars, a score of at least 85 but less than 95 is 2 stars, any other\n",
+    "score is 1 star. alos Canadian Vintners Association bought alot of ads on the site, so any wines from Canada should automatically get 3 stars,\n",
+    "regardles of points. create a Series \"star_ratings\" with the number of stars corresponding to each review in the dataset"
+   ],
+   "id": "5250a4fddbe5f0da"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "30113d69febdca4e"
+   "id": "6d090d2cb28c328c"
   }
  ],
  "metadata": {
