--- a/Pandas/Kaggle/3-summary functions and maps.ipynb
+++ b/Pandas/Kaggle/3-summary functions and maps.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:14.501120Z",
-     "start_time": "2024-12-22T05:25:14.477740Z"
+     "end_time": "2024-12-22T09:45:14.851856Z",
+     "start_time": "2024-12-22T09:45:13.609412Z"
     }
    },
    "cell_type": "code",
@@ -273,18 +273,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:24.788614Z",
-     "start_time": "2024-12-22T05:25:24.778489Z"
+     "end_time": "2024-12-22T09:45:15.728774Z",
+     "start_time": "2024-12-22T09:45:15.715711Z"
     }
    },
    "cell_type": "code",
@@ -674,18 +674,18 @@
        "</div>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:27.091006Z",
-     "start_time": "2024-12-22T05:25:27.084145Z"
+     "end_time": "2024-12-22T09:45:15.762335Z",
+     "start_time": "2024-12-22T09:45:15.753317Z"
     }
    },
    "cell_type": "code",
@@ -817,18 +817,18 @@
        "</div>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:29.295977Z",
-     "start_time": "2024-12-22T05:25:29.288089Z"
+     "end_time": "2024-12-22T09:45:15.972168Z",
+     "start_time": "2024-12-22T09:45:15.960336Z"
     }
    },
    "cell_type": "code",
@@ -1040,18 +1040,18 @@
        "</div>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:31.531447Z",
-     "start_time": "2024-12-22T05:25:31.520223Z"
+     "end_time": "2024-12-22T09:45:16.265569Z",
+     "start_time": "2024-12-22T09:45:16.254935Z"
     }
    },
    "cell_type": "code",
@@ -1441,18 +1441,18 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:33.764863Z",
-     "start_time": "2024-12-22T05:25:33.758618Z"
+     "end_time": "2024-12-22T09:45:16.570684Z",
+     "start_time": "2024-12-22T09:45:16.557937Z"
     }
    },
    "cell_type": "code",
@@ -1469,18 +1469,18 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:35.946976Z",
-     "start_time": "2024-12-22T05:25:35.940063Z"
+     "end_time": "2024-12-22T09:45:16.840662Z",
+     "start_time": "2024-12-22T09:45:16.835415Z"
     }
    },
    "cell_type": "code",
@@ -1497,18 +1497,18 @@
        "Name: Weight, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 27
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:42.793759Z",
-     "start_time": "2024-12-22T05:25:42.789029Z"
+     "end_time": "2024-12-22T09:45:17.026178Z",
+     "start_time": "2024-12-22T09:45:17.021406Z"
     }
    },
    "cell_type": "code",
@@ -1521,18 +1521,18 @@
        "np.float64(1.2827476038338659)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 30
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:39.782624Z",
-     "start_time": "2024-12-22T05:25:39.778134Z"
+     "end_time": "2024-12-22T09:45:17.260627Z",
+     "start_time": "2024-12-22T09:45:17.252153Z"
     }
    },
    "cell_type": "code",
@@ -1546,18 +1546,18 @@
        "       10.,  8.,  9., 13., 11., 12., 25.])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 28
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:41.235941Z",
-     "start_time": "2024-12-22T05:25:41.229252Z"
+     "end_time": "2024-12-22T09:45:17.522270Z",
+     "start_time": "2024-12-22T09:45:17.516342Z"
     }
    },
    "cell_type": "code",
@@ -1590,18 +1590,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:45.647422Z",
-     "start_time": "2024-12-22T05:25:45.640422Z"
+     "end_time": "2024-12-22T09:45:17.621684Z",
+     "start_time": "2024-12-22T09:45:17.615278Z"
     }
    },
    "cell_type": "code",
@@ -1629,18 +1629,18 @@
        "Name: Reviews Num Helpful, Length: 2890, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:16.032968Z",
-     "start_time": "2024-12-22T05:25:15.927974Z"
+     "end_time": "2024-12-22T09:45:18.059765Z",
+     "start_time": "2024-12-22T09:45:17.911028Z"
     }
    },
    "cell_type": "code",
@@ -1910,18 +1910,18 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:16.108607Z",
-     "start_time": "2024-12-22T05:25:16.102971Z"
+     "end_time": "2024-12-22T09:45:18.159405Z",
+     "start_time": "2024-12-22T09:45:18.153702Z"
     }
    },
    "cell_type": "code",
@@ -1950,18 +1950,18 @@
        "Name: Reviews Num Helpful, Length: 2890, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:53.785069Z",
-     "start_time": "2024-12-22T05:25:53.776172Z"
+     "end_time": "2024-12-22T09:45:18.293500Z",
+     "start_time": "2024-12-22T09:45:18.285456Z"
     }
    },
    "cell_type": "code",
@@ -1986,12 +1986,12 @@
        "Length: 2890, dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 32
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -2002,8 +2002,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:25:56.860388Z",
-     "start_time": "2024-12-22T05:25:56.851268Z"
+     "end_time": "2024-12-22T09:45:18.553922Z",
+     "start_time": "2024-12-22T09:45:18.540219Z"
     }
    },
    "cell_type": "code",
@@ -2227,18 +2227,18 @@
        "</div>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 33
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:26:00.635564Z",
-     "start_time": "2024-12-22T05:26:00.627116Z"
+     "end_time": "2024-12-22T09:45:18.864Z",
+     "start_time": "2024-12-22T09:45:18.853570Z"
     }
    },
    "cell_type": "code",
@@ -2465,18 +2465,18 @@
        "</div>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:26:05.028198Z",
-     "start_time": "2024-12-22T05:26:05.019501Z"
+     "end_time": "2024-12-22T09:45:19.085338Z",
+     "start_time": "2024-12-22T09:45:19.075634Z"
     }
    },
    "cell_type": "code",
@@ -2724,18 +2724,18 @@
        "</div>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 35
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:26:07.749694Z",
-     "start_time": "2024-12-22T05:26:07.739108Z"
+     "end_time": "2024-12-22T09:45:19.215014Z",
+     "start_time": "2024-12-22T09:45:19.203111Z"
     }
    },
    "cell_type": "code",
@@ -3004,18 +3004,18 @@
        "</div>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 36
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:26:17.695581Z",
-     "start_time": "2024-12-22T05:26:17.673406Z"
+     "end_time": "2024-12-22T09:45:19.406422Z",
+     "start_time": "2024-12-22T09:45:19.395681Z"
     }
    },
    "cell_type": "code",
@@ -3331,18 +3331,18 @@
        "</div>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 39
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:26:20.177716Z",
-     "start_time": "2024-12-22T05:26:20.160825Z"
+     "end_time": "2024-12-22T09:45:19.627595Z",
+     "start_time": "2024-12-22T09:45:19.617197Z"
     }
    },
    "cell_type": "code",
@@ -3651,18 +3651,18 @@
        "</div>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 40
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:26:41.285461Z",
-     "start_time": "2024-12-22T05:26:41.280465Z"
+     "end_time": "2024-12-22T09:45:19.817941Z",
+     "start_time": "2024-12-22T09:45:19.813183Z"
     }
    },
    "cell_type": "code",
@@ -3675,18 +3675,18 @@
        "19"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T05:27:15.258327Z",
-     "start_time": "2024-12-22T05:27:15.252224Z"
+     "end_time": "2024-12-22T09:45:20.265530Z",
+     "start_time": "2024-12-22T09:45:20.257475Z"
     }
    },
    "cell_type": "code",
@@ -3701,18 +3701,18 @@
        "Name: 19, dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 42
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T07:26:48.966866Z",
-     "start_time": "2024-12-22T07:26:48.091698Z"
+     "end_time": "2024-12-22T09:45:53.108538Z",
+     "start_time": "2024-12-22T09:45:52.387483Z"
     }
    },
    "cell_type": "code",
@@ -4022,12 +4022,12 @@
        "</div>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 52
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -4038,8 +4038,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T07:26:51.183353Z",
-     "start_time": "2024-12-22T07:26:51.176372Z"
+     "end_time": "2024-12-22T09:45:21.407282Z",
+     "start_time": "2024-12-22T09:45:21.395645Z"
     }
    },
    "cell_type": "code",
@@ -4052,12 +4052,12 @@
        "np.float64(88.0)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -4068,8 +4068,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T07:26:53.486230Z",
-     "start_time": "2024-12-22T07:26:53.479572Z"
+     "end_time": "2024-12-22T09:45:21.519716Z",
+     "start_time": "2024-12-22T09:45:21.509985Z"
     }
    },
    "cell_type": "code",
@@ -4090,12 +4090,12 @@
        "       'China', 'Egypt'], dtype=object)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 54
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -4106,8 +4106,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T07:28:22.298653Z",
-     "start_time": "2024-12-22T07:28:22.288032Z"
+     "end_time": "2024-12-22T09:47:08.894551Z",
+     "start_time": "2024-12-22T09:47:08.883087Z"
     }
    },
    "cell_type": "code",
@@ -4135,12 +4135,12 @@
        "Name: count, Length: 43, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 57
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -4151,8 +4151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T07:30:14.562551Z",
-     "start_time": "2024-12-22T07:30:14.555024Z"
+     "end_time": "2024-12-22T09:45:21.839282Z",
+     "start_time": "2024-12-22T09:45:21.829461Z"
     }
    },
    "cell_type": "code",
@@ -4179,12 +4179,12 @@
        "Name: price, Length: 129971, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 59
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -4198,8 +4198,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T07:35:23.674872Z",
-     "start_time": "2024-12-22T07:35:23.660882Z"
+     "end_time": "2024-12-22T09:45:21.986113Z",
+     "start_time": "2024-12-22T09:45:21.977214Z"
     }
    },
    "cell_type": "code",
@@ -4217,12 +4217,12 @@
        "'Felix Solis 2013 Flirty Bird Syrah (Vino de la Tierra de Castilla)'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 64
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -4237,8 +4237,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T08:17:02.106506Z",
-     "start_time": "2024-12-22T08:17:01.970048Z"
+     "end_time": "2024-12-22T09:46:41.860847Z",
+     "start_time": "2024-12-22T09:46:41.696456Z"
     }
    },
    "cell_type": "code",
@@ -4260,12 +4260,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 71
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -4274,17 +4274,70 @@
     "7. we'd like to host these wine reviews on our website, but rate system changing from 80 to 100 points is too hard to understand - we'd like to\n",
     "translate them to simpler star ratings. A score of 95 and higher counts as 3 stars, a score of at least 85 but less than 95 is 2 stars, any other\n",
     "score is 1 star. alos Canadian Vintners Association bought alot of ads on the site, so any wines from Canada should automatically get 3 stars,\n",
-    "regardles of points. create a Series \"star_ratings\" with the number of stars corresponding to each review in the dataset"
+    "regardless of points. create a Series \"star_ratings\" with the number of stars corresponding to each review in the dataset"
    ],
    "id": "5250a4fddbe5f0da"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-22T09:48:41.439909Z",
+     "start_time": "2024-12-22T09:48:40.462845Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "source": [
+    "def star_giver(rows):\n",
+    "    country_stars = {\n",
+    "        rows['country'] == 'Canada': 3,\n",
+    "        rows['points'] >= 95: 3,\n",
+    "        85 <= rows['points'] < 95: 2,\n",
+    "        rows['points'] < 85: 1}\n",
+    "    # return country_stars.get(rows['country'], 0)\n",
+    "\n",
+    "\n",
+    "star_ratings = reviews.apply(star_giver, axis=1)\n",
+    "\n",
+    "star_ratings"
+   ],
+   "id": "6d090d2cb28c328c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         None\n",
+       "1         None\n",
+       "2         None\n",
+       "3         None\n",
+       "4         None\n",
+       "          ... \n",
+       "129966    None\n",
+       "129967    None\n",
+       "129968    None\n",
+       "129969    None\n",
+       "129970    None\n",
+       "Length: 129971, dtype: object"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 50
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-22T09:45:22.427219Z",
+     "start_time": "2024-12-22T09:45:22.425253Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "6d090d2cb28c328c"
+   "id": "5cf241f55a5503fa",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
