--- a/Pandas/Kaggle/3-summary functions and maps.ipynb
+++ b/Pandas/Kaggle/3-summary functions and maps.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:14.851856Z",
-     "start_time": "2024-12-22T09:45:13.609412Z"
+     "end_time": "2024-12-22T10:07:50.117944Z",
+     "start_time": "2024-12-22T10:07:49.209487Z"
     }
    },
    "cell_type": "code",
@@ -273,12 +273,12 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "metadata": {
@@ -3711,8 +3711,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:45:53.108538Z",
-     "start_time": "2024-12-22T09:45:52.387483Z"
+     "end_time": "2024-12-22T10:07:59.051885Z",
+     "start_time": "2024-12-22T10:07:58.266308Z"
     }
    },
    "cell_type": "code",
@@ -4022,12 +4022,12 @@
        "</div>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 33
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -4281,50 +4281,53 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T09:48:41.439909Z",
-     "start_time": "2024-12-22T09:48:40.462845Z"
+     "end_time": "2024-12-22T10:10:30.605472Z",
+     "start_time": "2024-12-22T10:10:29.684294Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def star_giver(rows):\n",
-    "    country_stars = {\n",
-    "        rows['country'] == 'Canada': 3,\n",
-    "        rows['points'] >= 95: 3,\n",
-    "        85 <= rows['points'] < 95: 2,\n",
-    "        rows['points'] < 85: 1}\n",
-    "    # return country_stars.get(rows['country'], 0)\n",
+    "    if rows['country'] == 'Canada':\n",
+    "        return 3\n",
+    "    elif rows['points'] >= 95:\n",
+    "        return 3\n",
+    "    elif 85 <= rows['points'] < 95:\n",
+    "        return 2\n",
+    "    else:\n",
+    "        return 1\n",
     "\n",
     "\n",
     "star_ratings = reviews.apply(star_giver, axis=1)\n",
     "\n",
-    "star_ratings"
+    "star_ratings.name = \"Stars\"\n",
+    "star_ratings\n"
    ],
    "id": "6d090d2cb28c328c",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         None\n",
-       "1         None\n",
-       "2         None\n",
-       "3         None\n",
-       "4         None\n",
-       "          ... \n",
-       "129966    None\n",
-       "129967    None\n",
-       "129968    None\n",
-       "129969    None\n",
-       "129970    None\n",
-       "Length: 129971, dtype: object"
+       "0         2\n",
+       "1         2\n",
+       "2         2\n",
+       "3         2\n",
+       "4         2\n",
+       "         ..\n",
+       "129966    2\n",
+       "129967    2\n",
+       "129968    2\n",
+       "129969    2\n",
+       "129970    2\n",
+       "Name: Stars, Length: 129971, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 50
+   "execution_count": 12
   },
   {
    "metadata": {
